wip, big funcs to help think through the problem

--- a/changify/config.yaml
+++ b/changify/config.yaml
@@ -1,42 +1,42 @@
 refl: 'SR'
 file-root: ''
 file-specs:
-  blue:
+  blues:
     LC08: '{refl}B2.tif'
     LE07: '{refl}B1.tif'
     LT05: '{refl}B1.tif'
     LT04: '{refl}B1.tif'
-  green:
+  greens:
     LC08: '{refl}B3.tif'
     LE07: '{refl}B2.tif'
     LT05: '{refl}B2.tif'
     LT04: '{refl}B2.tif'
-  red:
+  reds:
     LC08: '{refl}B4.tif'
     LE07: '{refl}B3.tif'
     LT05: '{refl}B3.tif'
     LT04: '{refl}B3.tif'
-  nir:
+  nirs:
     LC08: '{refl}B5.tif'
     LE07: '{refl}B4.tif'
     LT05: '{refl}B4.tif'
     LT04: '{refl}B4.tif'
-  swir1:
+  swir1s:
     LC08: '{refl}B6.tif'
     LE07: '{refl}B5.tif'
     LT05: '{refl}B5.tif'
     LT04: '{refl}B5.tif'
-  swir2:
+  swir2s:
     LC08: '{refl}B7.tif'
     LE07: '{refl}B7.tif'
     LT05: '{refl}B7.tif'
     LT04: '{refl}B7.tif'
-  thermal:
+  thermals:
     LC08: '{refl}B10.tif'
     LE07: '{refl}B6.tif'
     LT05: '{refl}B6.tif'
     LT04: '{refl}B6.tif'
-  quality:
+  qas:
     LC08: 'PIXELQA.tif'
     LE07: 'PIXELQA.tif'
     LT05: 'PIXELQA.tif'
